Bug 640588 - "Bad rendering of webm and ogv with 16-bits displays on Linux" [r=jones.chris.g a-2.0=doug.turner]