gfx/layers/basic/BasicImages.cpp
@@ -232,6 +232,7 @@ BasicPlanarYCbCrImage::SetData(const Data& aData)
                                type);
     }
   }
+  SetOffscreenFormat(format);
   mSize = size;
 }
 
